deploy: 95e7c5ce3b5d949acd8dc885bf6098cced6fd3e5

--- a/Hardware/index.html
+++ b/Hardware/index.html
@@ -384,7 +384,7 @@
 <p><strong>RomWBW Hardware</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-04 Jun 2025</p>
+06 Jun 2025</p>
 <h1 id="overview">Overview</h1>
 <h2 id="supported-platforms">Supported Platforms</h2>
 <p>This section contains a summary of the system configuration target for
@@ -4349,6 +4349,10 @@ the active platform and configuration.</p>
 <tr>
 <td>INTRTC</td>
 <td>Interrupt-based Real Time Clock</td>
+</tr>
+<tr>
+<td>PCRTC</td>
+<td>MC146818/DS1285/DS12885 PC style</td>
 </tr>
 <tr>
 <td>PCF</td>
