--- a/SystemGuide/index.html
+++ b/SystemGuide/index.html
@@ -659,7 +659,7 @@
 <p><strong>RomWBW System Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-04 Jun 2025</p>
+06 Jun 2025</p>
 <h1 id="overview">Overview</h1>
 <p>The objective of RomWBW is to provide firmware, operating systems, and
 applications targeting the Z80 family of CPUs. The firmware, in the form
@@ -2881,6 +2881,12 @@ table below enumerates these values.</p>
 <td style="text-align: right;">0x07</td>
 <td>eZ80 on-chip RTC</td>
 <td>ez80rtc.asm</td>
+</tr>
+<tr>
+<td>RTCDEV_PC</td>
+<td style="text-align: right;">0x08</td>
+<td>MC146818/DS1285/DS12885 RTC w/ NVRAM</td>
+<td>pcrtc.asm</td>
 </tr>
 </tbody>
 </table>
