deploy: ba7281d399bc564daaa069bd4362ceea7d4a06ae

--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -189,10 +189,10 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-07 Jun 2025</p>
+22 Jun 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
-of CP/M (and workalike) operating systems and applications for modern
+of CP/M (and work-alike) operating systems and applications for modern
 Z80/180/280 retro-computing hardware systems.</p>
 <p>A wide variety of platforms are supported including those produced by
 these developer communities:</p>
@@ -364,6 +364,8 @@ documentation:</p>
   RomWBW HBIOS API functions.</p>
 </li>
 </ul>
+<p>An online HTML version of this documentation is hosted at
+<a href="https://wwarthen.github.io/RomWBW">https://wwarthen.github.io/RomWBW</a>.</p>
 <p>Each of the operating systems and ROM applications included with RomWBW
 are sophisticated tools in their own right. It is not reasonable to
 fully document their usage. However, you will find complete manuals in
@@ -544,6 +546,10 @@ let me know if I missed you!</p>
 <li>
 <p>Rob Gowin created an online documentation site via MkDocs, and
   contributed a driver for the Xosera FPGA-based video controller.</p>
+</li>
+<li>
+<p>Jörg Linder has contributed disassembled and nicely commented source
+  for ZSDOS2 and the BPBIOS utilities.</p>
 </li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
