--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-30 Jun 2025</p>
+02 Jul 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -486,6 +486,7 @@ let me know if I missed you!</p>
 <li>Z3PLUS operating system disk image</li>
 <li>COPYSL, and SLABEL utilities</li>
 <li>Display of bootable slices via “S” command during startup</li>
+<li>Optimisations of HBIOS and CBIOS to reduce overall code size</li>
 <li>a feature for RomWBW configuration by NVRAM</li>
 <li>
 <p>the /B bulk mode of disk assignment to the ASSIGN utility</p>
@@ -684,5 +685,5 @@ control system to ensure their contributions are clearly documented.</p>
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-06-30 21:45:34.765352+00:00
+Build Date UTC : 2025-07-02 21:26:24.173778+00:00
 -->
