deploy: 0a35539d1ca0db22489aaca58c7ba8db3a5ce72c

--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -294,7 +294,7 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-bs-level="2"><a href="#microsoft-fortran-80-fortran" class="nav-link">Microsoft Fortran 80 (Fortran)</a>
+            <li class="nav-item" data-bs-level="2"><a href="#microsoft-fortran-80" class="nav-link">Microsoft Fortran 80</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -306,6 +306,10 @@
               <ul class="nav flex-column">
               </ul>
             </li>
+            <li class="nav-item" data-bs-level="2"><a href="#infocom-text-adventure-games" class="nav-link">Infocom (Text Adventure Games)</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
             <li class="nav-item" data-bs-level="2"><a href="#msx-roms" class="nav-link">MSX ROMS</a>
               <ul class="nav flex-column">
               </ul>
@@ -314,7 +318,7 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-bs-level="2"><a href="#wordstar-4" class="nav-link">WordStar 4</a>
+            <li class="nav-item" data-bs-level="2"><a href="#wordstar-4-word-processor" class="nav-link">WordStar 4 (Word processor)</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -332,7 +336,7 @@
 <p><strong>RomWBW Disk Catalog</strong> \
 Version 3.6 \
 Mark Pruden \&amp; Mykl Orders  (<a href="mailto:"></a>) \
-02 Jul 2025</p>
+08 Jul 2025</p>
 <h1 id="romwbw-distribution-file-catalog">RomWBW Distribution File Catalog</h1>
 <p>This document is a reference to the files found on the disk media
 distributed with RomWBW. Specifically, RomWBW provides a set of floppy
@@ -3372,7 +3376,7 @@ the Doc/Language directory Cowgol Language.pdf.</p>
 </tr>
 </tbody>
 </table>
-<h2 id="microsoft-fortran-80-fortran">Microsoft Fortran 80 (Fortran)</h2>
+<h2 id="microsoft-fortran-80">Microsoft Fortran 80</h2>
 <p>Floppy Disk Image: <strong>fd_fortran.img</strong><br />
 Hard Disk Image: <strong>hd_fortran.img</strong></p>
 <p>This is Microsoft’s implementation of the FORTRAN scientific-oriented
@@ -3659,6 +3663,240 @@ CP/M and compatible operations systems provided in RomWBW.</p>
 </tr>
 </tbody>
 </table>
+<h2 id="infocom-text-adventure-games">Infocom (Text Adventure Games)</h2>
+<p>Hard Disk Image: <strong>hd_infocom.img</strong></p>
+<p>A collection of all Official releases of the interactive fiction games
+produced by Infocom in the 1980’s</p>
+<p>The following files are found in</p>
+<ul>
+<li>/Source/Images/d_infocom</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th><strong>File</strong></th>
+<th><strong>Description</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>amfv.z4</td>
+<td>A Mind Forever Voyaging (*)</td>
+</tr>
+<tr>
+<td>arthur.z6</td>
+<td>Arthur - The Quest for Excalibur (*)</td>
+</tr>
+<tr>
+<td>ballyhoo.z3</td>
+<td>Ballyhoo</td>
+</tr>
+<tr>
+<td>beyond.z5</td>
+<td>Beyond Zork (*)</td>
+</tr>
+<tr>
+<td>border.z5</td>
+<td>Border Zone (*)</td>
+</tr>
+<tr>
+<td>bureau.z4</td>
+<td>Bureaucracy (*)</td>
+</tr>
+<tr>
+<td>cutthr.z3</td>
+<td>Cutthroats</td>
+</tr>
+<tr>
+<td>deadline.z3</td>
+<td>Deadline</td>
+</tr>
+<tr>
+<td>enchant.z3</td>
+<td>Enchanter</td>
+</tr>
+<tr>
+<td>h2g2.z3</td>
+<td>The Hitchhiker’s Guide to the Galaxy</td>
+</tr>
+<tr>
+<td>hollyw.z3</td>
+<td>Hollywood Hijinx</td>
+</tr>
+<tr>
+<td>infidel.z3</td>
+<td>Infidel</td>
+</tr>
+<tr>
+<td>journey.z6</td>
+<td>Journey (*)</td>
+</tr>
+<tr>
+<td>leather.z3</td>
+<td>Leather Goddesses of Phobos</td>
+</tr>
+<tr>
+<td>lurking.z3</td>
+<td>The Lurking Horror</td>
+</tr>
+<tr>
+<td>moonmist.z3</td>
+<td>Moonmist</td>
+</tr>
+<tr>
+<td>nordbert.z4</td>
+<td>Nord and Bert Couldn’t Make Head or Tail of It (*)</td>
+</tr>
+<tr>
+<td>planet.z3</td>
+<td>Planetfall</td>
+</tr>
+<tr>
+<td>plunder.z3</td>
+<td>Plundered Hearts</td>
+</tr>
+<tr>
+<td>readme.txt</td>
+<td>Additional Documentation</td>
+</tr>
+<tr>
+<td>seastalk.z3</td>
+<td>Seastalker</td>
+</tr>
+<tr>
+<td>sherlock.z5</td>
+<td>Sherlock (*)</td>
+</tr>
+<tr>
+<td>shogun.z6</td>
+<td>Shogun (*)</td>
+</tr>
+<tr>
+<td>sorcerer.z3</td>
+<td>Sorcerer</td>
+</tr>
+<tr>
+<td>spellb.z3</td>
+<td>Spellbreaker</td>
+</tr>
+<tr>
+<td>starcros.z3</td>
+<td>Starcross</td>
+</tr>
+<tr>
+<td>stationf.z3</td>
+<td>Stationfall</td>
+</tr>
+<tr>
+<td>suspect.z3</td>
+<td>Suspect</td>
+</tr>
+<tr>
+<td>suspend.z3</td>
+<td>Suspended</td>
+</tr>
+<tr>
+<td>trinity.z4</td>
+<td>Trinity (*)</td>
+</tr>
+<tr>
+<td>wishb.z3</td>
+<td>Wishbringer</td>
+</tr>
+<tr>
+<td>witness.z3</td>
+<td>Witness</td>
+</tr>
+<tr>
+<td>zork0.z6</td>
+<td>Zork Zero (*)</td>
+</tr>
+<tr>
+<td>zork1.z3</td>
+<td>Zork I</td>
+</tr>
+<tr>
+<td>zork2.z3</td>
+<td>Zork II</td>
+</tr>
+<tr>
+<td>zork3.z3</td>
+<td>Zork III</td>
+</tr>
+</tbody>
+</table>
+<p>The above games have been curated from here
+<a href="https://eblong.com/infocom/">https://eblong.com/infocom/</a>. Full game documentation can be found here
+<a href="https://infodoc.plover.net/">https://infodoc.plover.net/</a></p>
+<p>The game files are a virtual machine code commonly known as Z-Machine,
+they are portable and will run on any machine that has a Z-Machine
+interpreter.</p>
+<ul>
+<li>All the Z3 games come with the official CP/M interpreter (the <code>COM</code>
+  file) version C last updated by Inforcom on 5th Feb 1985. You can
+  simply run the game by running it from the <code>COM</code> program  </li>
+<li>All latter games Z4, Z5,.. and above, (Marked as * in the listing
+  above) are more sophisticated and require a better interpreter.
+  i.e. VEZZA.</li>
+</ul>
+<h4 id="vezza-user-area-15">VEZZA (User Area 15)</h4>
+<p>Vezza is a modern Infocom/Inform/Z-machine text adventure interpreter
+for 8 bit z80 based computers. What makes it modern is that it is
+written in hand-crafted z80 assembler for maximum speed, and can load
+not only the classics such as Zork 1,2 and 3 but also the later games.</p>
+<p>It can run Z1 up to Z8 inform format interactive fiction game files. To
+run a game with Vezza just type Vezza followed by the game you want to
+run. e.g.</p>
+<p><code>VEZZA ZORK0.Z6</code></p>
+<p><strong>Note:</strong> One of the bigger constraints is available RAM. An OS such as
+ZPM since it uses banked RAM does have a good amount of available RAM
+and was used to test these games work.</p>
+<p>This tool is free but the developer accepts your support by letting you
+pay what you think is fair for the tool. If you find this useful
+consider donating at:</p>
+<p><a href="https://sijnstra.itch.io/vezza">https://sijnstra.itch.io/vezza</a></p>
+<p>You should (test and) choose one that works on you configuration, and
+best to copy and rename it as vezza.com</p>
+<table>
+<thead>
+<tr>
+<th><strong>File</strong></th>
+<th><strong>Description</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>vezza-B.com</td>
+<td>80x24, VT52 + Banked CP/M 3</td>
+</tr>
+<tr>
+<td>vezza-FG.com</td>
+<td>80x25, VT100/ANSI (16 color) + CP/M 3</td>
+</tr>
+<tr>
+<td>vezza-C2.com</td>
+<td>80x24, VT100 - CP/M 2.2 large memory, no timed input</td>
+</tr>
+<tr>
+<td>vezza-CC.com</td>
+<td>80x24, VT100 (256 colour) - CP/M 2.2 large memory, no timed input</td>
+</tr>
+<tr>
+<td>vezza-AV.com</td>
+<td>80x24, VT100 (16 colour) - CP/M 2.2 high RAM.</td>
+</tr>
+<tr>
+<td>vezza-AX.com</td>
+<td>80x25, VT100/ANSI (16 colour) - CP/M 2.2 high RAM.</td>
+</tr>
+<tr>
+<td>vezza-RW.com</td>
+<td>80x24, VT100 - CP/M 2.2</td>
+</tr>
+</tbody>
+</table>
+<p>The above is a subset of available builds. The full repository including
+documentation is available at <a href="https://gitlab.com/sijnstra1/vezza/">https://gitlab.com/sijnstra1/vezza/</a></p>
 <h2 id="msx-roms">MSX ROMS</h2>
 <p>Hard Disk Image: <strong>hd_msxroms1.img</strong><br />
 Hard Disk Image: <strong>hd_msxroms2.img</strong></p>
@@ -3743,7 +3981,7 @@ Turbo_Pascal_Version_3.0_Reference_Manual_1986.pdf</p>
 </tr>
 </tbody>
 </table>
-<h2 id="wordstar-4">WordStar 4</h2>
+<h2 id="wordstar-4-word-processor">WordStar 4 (Word processor)</h2>
 <p>Floppy Disk Image: <strong>fd_ws4.img</strong><br />
 Hard Disk Image: <strong>hd_ws4.img</strong><br />
 Combo Disk Image: <strong>Slice 5</strong></p>
