--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -189,7 +189,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-02 Jul 2025</p>
+08 Jul 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -494,6 +494,7 @@ let me know if I missed you!</p>
 </li>
 <li>creation of the Introduction and Hardware documents</li>
 <li>Z3PLUS operating system disk image</li>
+<li>Infocom text adventure game disk image</li>
 <li>COPYSL, and SLABEL utilities</li>
 <li>Display of bootable slices via “S” command during startup</li>
 <li>Optimisations of HBIOS and CBIOS to reduce overall code size</li>
