--- a/UserGuide/index.html
+++ b/UserGuide/index.html
@@ -535,7 +535,7 @@
 <p><strong>RomWBW User Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-02 Jul 2025</p>
+08 Jul 2025</p>
 <h4 id="preface">Preface</h4>
 <p>This document is a general usage guide for the RomWBW software and is
 generally the best place to start with RomWBW.</p>
@@ -2298,6 +2298,11 @@ The following table shows the disk images available.</p>
 <tr>
 <td>xxx_hitechc.img</td>
 <td>HI-TECH Z80 CP/M C compiler</td>
+<td>No</td>
+</tr>
+<tr>
+<td>xxx_infocom.img</td>
+<td>Infocom Games Disk</td>
 <td>No</td>
 </tr>
 <tr>
