deploy: e4c5f1e1f82770e4c5a477b79cb54a9c56cf1046

--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -336,7 +336,7 @@
 <p><strong>RomWBW Disk Catalog</strong> \
 Version 3.6 \
 Mark Pruden \&amp; Mykl Orders  (<a href="mailto:"></a>) \
-08 Jul 2025</p>
+18 Jul 2025</p>
 <h1 id="romwbw-distribution-file-catalog">RomWBW Distribution File Catalog</h1>
 <p>This document is a reference to the files found on the disk media
 distributed with RomWBW. Specifically, RomWBW provides a set of floppy
@@ -3757,7 +3757,7 @@ produced by Infocom in the 1980’s</p>
 </tr>
 <tr>
 <td>readme.txt</td>
-<td>Additional Documentation</td>
+<td>Documentation about the Infocom games</td>
 </tr>
 <tr>
 <td>seastalk.z3</td>
@@ -3822,6 +3822,10 @@ produced by Infocom in the 1980’s</p>
 <tr>
 <td>zork3.z3</td>
 <td>Zork III</td>
+</tr>
+<tr>
+<td>zorknote.txt</td>
+<td>Documentation about terminal config of COM files</td>
 </tr>
 </tbody>
 </table>
