--- a/SystemGuide/index.html
+++ b/SystemGuide/index.html
@@ -659,7 +659,7 @@
 <p><strong>RomWBW System Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-08 Jul 2025</p>
+18 Jul 2025</p>
 <h1 id="overview">Overview</h1>
 <p>The objective of RomWBW is to provide firmware, operating systems, and
 applications targeting the Z80 family of CPUs. The firmware, in the form
@@ -2241,6 +2241,12 @@ enumerates their values.</p>
 <td style="text-align: right;">0x0E</td>
 <td>CH375/376 SD Card</td>
 <td>ch.asm</td>
+</tr>
+<tr>
+<td>DIODEV_USB</td>
+<td style="text-align: right;">0x0F</td>
+<td>CH376 Native USB Device</td>
+<td>ch376.asm</td>
 </tr>
 </tbody>
 </table>
